5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4124/executions/1800_2568.log
== TEST (2019-06-11 10:52:06) 
-- CODE:
x = int(input("Nmr de asteriscos: "))
j = 2
for i in range(2 * x)
	print((x*"*") + (o * j))
	x = x-2
	j = j + 2
	
-- ERROR:
File "XXXX", line 3
    for i in range(2 * x)
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:52:11) 
-- CODE:
x = int(input("Nmr de asteriscos: "))
j = 2
for i in range(2 * x):
	print((x*"*") + (o * j))
	x = x-2
	j = j + 2
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print((x*"*") + (o * j))
NameError: name 'o' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:52:25) 
-- CODE:
x = int(input("Nmr de asteriscos: "))
j = 2
for i in range(2 * x):
	print((x*"*") + ("o" * j))
	x = x-2
	j = j + 2
	
-- OUTPUT:
***********oo
*********oooo
*******oooooo
*****oooooooo
***oooooooooo
*oooooooooooo
oooooooooooooo
oooooooooooooooo
oooooooooooooooooo
oooooooooooooooooooo
oooooooooooooooooooooo
oooooooooooooooooooooooo
oooooooooooooooooooooooooo
oooooooooooooooooooooooooooo
oooooooooooooooooooooooooooooo
oooooooooooooooooooooooooooooooo
oooooooooooooooooooooooooooooooooo
oooooooooooooooooooooooooooooooooooo
oooooooooooooooooooooooooooooooooooooo
oooooooooooooooooooooooooooooooooooooooo
oooooooooooooooooooooooooooooooooooooooooo
oooooooooooooooooooooooooooooooooooooooooooo
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:52:51) 
-- CODE:
x = int(input("Nmr de asteriscos: "))
j = 2
for i in range(2 * x):
	print((x*"*") + ("o" * j) + (x * "*"))
	x = x-2
	j = j + 2
	
-- OUTPUT:
***********oo***********
*********oooo*********
*******oooooo*******
*****oooooooo*****
***oooooooooo***
*oooooooooooo*
oooooooooooooo
oooooooooooooooo
oooooooooooooooooo
oooooooooooooooooooo
oooooooooooooooooooooo
oooooooooooooooooooooooo
oooooooooooooooooooooooooo
oooooooooooooooooooooooooooo
oooooooooooooooooooooooooooooo
oooooooooooooooooooooooooooooooo
oooooooooooooooooooooooooooooooooo
oooooooooooooooooooooooooooooooooooo
oooooooooooooooooooooooooooooooooooooo
oooooooooooooooooooooooooooooooooooooooo
oooooooooooooooooooooooooooooooooooooooooo
oooooooooooooooooooooooooooooooooooooooooooo
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:53:28) 
-- CODE:
x = int(input("Nmr de asteriscos: "))
j = 2
for i in range(2 * x):
	print((x*"*") + ("o" * j) + ("o" * j) + (x * "*"))
	x = x-1
	j = j + 1
	
-- OUTPUT:
***********oooo***********
**********oooooo**********
*********oooooooo*********
********oooooooooo********
*******oooooooooooo*******
******oooooooooooooo******
*****oooooooooooooooo*****
****oooooooooooooooooo****
***oooooooooooooooooooo***
**oooooooooooooooooooooo**
*oooooooooooooooooooooooo*
oooooooooooooooooooooooooo
oooooooooooooooooooooooooooo
oooooooooooooooooooooooooooooo
oooooooooooooooooooooooooooooooo
oooooooooooooooooooooooooooooooooo
oooooooooooooooooooooooooooooooooooo
oooooooooooooooooooooooooooooooooooooo
oooooooooooooooooooooooooooooooooooooooo
oooooooooooooooooooooooooooooooooooooooooo
oooooooooooooooooooooooooooooooooooooooooooo
oooooooooooooooooooooooooooooooooooooooooooooo
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:53:42) 
-- CODE:
x = int(input("Nmr de asteriscos: "))
j = 1
for i in range(2 * x):
	print((x*"*") + ("o" * j) + ("o" * j) + (x * "*"))
	x = x-1
	j = j + 1
	
-- OUTPUT:
***********oo***********
**********oooo**********
*********oooooo*********
********oooooooo********
*******oooooooooo*******
******oooooooooooo******
*****oooooooooooooo*****
****oooooooooooooooo****
***oooooooooooooooooo***
**oooooooooooooooooooo**
*oooooooooooooooooooooo*
oooooooooooooooooooooooo
oooooooooooooooooooooooooo
oooooooooooooooooooooooooooo
oooooooooooooooooooooooooooooo
oooooooooooooooooooooooooooooooo
oooooooooooooooooooooooooooooooooo
oooooooooooooooooooooooooooooooooooo
oooooooooooooooooooooooooooooooooooooo
oooooooooooooooooooooooooooooooooooooooo
oooooooooooooooooooooooooooooooooooooooooo
oooooooooooooooooooooooooooooooooooooooooooo
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:53:54) 
-- CODE:
x = int(input("Nmr de asteriscos: "))
j = 0
for i in range(2 * x):
	print((x*"*") + ("o" * j) + ("o" * j) + (x * "*"))
	x = x-1
	j = j + 1
	
-- OUTPUT:
**********************
**********oo**********
*********oooo*********
********oooooo********
*******oooooooo*******
******oooooooooo******
*****oooooooooooo*****
****oooooooooooooo****
***oooooooooooooooo***
**oooooooooooooooooo**
*oooooooooooooooooooo*
oooooooooooooooooooooo
oooooooooooooooooooooooo
oooooooooooooooooooooooooo
oooooooooooooooooooooooooooo
oooooooooooooooooooooooooooooo
oooooooooooooooooooooooooooooooo
oooooooooooooooooooooooooooooooooo
oooooooooooooooooooooooooooooooooooo
oooooooooooooooooooooooooooooooooooooo
oooooooooooooooooooooooooooooooooooooooo
oooooooooooooooooooooooooooooooooooooooooo
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:55:34) 
-- CODE:
x = int(input("Nmr de asteriscos: "))
j = 0
for i in range(x):
	print((x*"*") + ("o" * j) + ("o" * j) + (x * "*"))
	x = x-1
	j = j + 1
	
-- OUTPUT:
**********************
**********oo**********
*********oooo*********
********oooooo********
*******oooooooo*******
******oooooooooo******
*****oooooooooooo*****
****oooooooooooooo****
***oooooooooooooooo***
**oooooooooooooooooo**
*oooooooooooooooooooo*
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 10:55:44) 
-- CODE:
x = int(input("Nmr de asteriscos: "))
j = 0
for i in range(x):
	print((x*"*") + ("o" * j) + ("o" * j) + (x * "*"))
	x = x-1
	j = j + 1
	
-- EXECUTION TIME:
0.921457
-- TEST CASE 1:
---- input:
11
---- correct output:
**********************
**********oo**********
*********oooo*********
********oooooo********
*******oooooooo*******
******oooooooooo******
*****oooooooooooo*****
****oooooooooooooo****
***oooooooooooooooo***
**oooooooooooooooooo**
*oooooooooooooooooooo*
---- user output:
**********************
**********oo**********
*********oooo*********
********oooooo********
*******oooooooo*******
******oooooooooo******
*****oooooooooooo*****
****oooooooooooooo****
***oooooooooooooooo***
**oooooooooooooooooo**
*oooooooooooooooooooo*
-- TEST CASE 2:
---- input:
19
---- correct output:
**************************************
******************oo******************
*****************oooo*****************
****************oooooo****************
***************oooooooo***************
**************oooooooooo**************
*************oooooooooooo*************
************oooooooooooooo************
***********oooooooooooooooo***********
**********oooooooooooooooooo**********
*********oooooooooooooooooooo*********
********oooooooooooooooooooooo********
*******oooooooooooooooooooooooo*******
******oooooooooooooooooooooooooo******
*****oooooooooooooooooooooooooooo*****
****oooooooooooooooooooooooooooooo****
***oooooooooooooooooooooooooooooooo***
**oooooooooooooooooooooooooooooooooo**
*oooooooooooooooooooooooooooooooooooo*
---- user output:
**************************************
******************oo******************
*****************oooo*****************
****************oooooo****************
***************oooooooo***************
**************oooooooooo**************
*************oooooooooooo*************
************oooooooooooooo************
***********oooooooooooooooo***********
**********oooooooooooooooooo**********
*********oooooooooooooooooooo*********
********oooooooooooooooooooooo********
*******oooooooooooooooooooooooo*******
******oooooooooooooooooooooooooo******
*****oooooooooooooooooooooooooooo*****
****oooooooooooooooooooooooooooooo****
***oooooooooooooooooooooooooooooooo***
**oooooooooooooooooooooooooooooooooo**
*oooooooooooooooooooooooooooooooooooo*
-- TEST CASE 3:
---- input:
26
---- correct output:
****************************************************
*************************oo*************************
************************oooo************************
***********************oooooo***********************
**********************oooooooo**********************
*********************oooooooooo*********************
********************oooooooooooo********************
*******************oooooooooooooo*******************
******************oooooooooooooooo******************
*****************oooooooooooooooooo*****************
****************oooooooooooooooooooo****************
***************oooooooooooooooooooooo***************
**************oooooooooooooooooooooooo**************
*************oooooooooooooooooooooooooo*************
************oooooooooooooooooooooooooooo************
***********oooooooooooooooooooooooooooooo***********
**********oooooooooooooooooooooooooooooooo**********
*********oooooooooooooooooooooooooooooooooo*********
********oooooooooooooooooooooooooooooooooooo********
*******oooooooooooooooooooooooooooooooooooooo*******
******oooooooooooooooooooooooooooooooooooooooo******
*****oooooooooooooooooooooooooooooooooooooooooo*****
****oooooooooooooooooooooooooooooooooooooooooooo****
***oooooooooooooooooooooooooooooooooooooooooooooo***
**oooooooooooooooooooooooooooooooooooooooooooooooo**
*oooooooooooooooooooooooooooooooooooooooooooooooooo*
---- user output:
****************************************************
*************************oo*************************
************************oooo************************
***********************oooooo***********************
**********************oooooooo**********************
*********************oooooooooo*********************
********************oooooooooooo********************
*******************oooooooooooooo*******************
******************oooooooooooooooo******************
*****************oooooooooooooooooo*****************
****************oooooooooooooooooooo****************
***************oooooooooooooooooooooo***************
**************oooooooooooooooooooooooo**************
*************oooooooooooooooooooooooooo*************
************oooooooooooooooooooooooooooo************
***********oooooooooooooooooooooooooooooo***********
**********oooooooooooooooooooooooooooooooo**********
*********oooooooooooooooooooooooooooooooooo*********
********oooooooooooooooooooooooooooooooooooo**
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:56:17) 
-- CODE:
x = int(input("Nmr de asteriscos: "))
j = 0
for i in range(x):
	print((x*"*") + ("o" * j) + ("o" * j) + (x * "*"))
	x = x-1
	j = j + 1
	
-- OUTPUT:
**********************
**********oo**********
*********oooo*********
********oooooo********
*******oooooooo*******
******oooooooooo******
*****oooooooooooo*****
****oooooooooooooo****
***oooooooooooooooo***
**oooooooooooooooooo**
*oooooooooooooooooooo*
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
